# restaurant-seating

./: .gitignore  LICENSE  Makefile  README.md  env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-frontend.txt  requirements-test.txt  requirements.txt  restaurant-seating-api.yaml  setup.py
@spec/: restaurant-seating-model.md
agents/: MODELING.md  Swagger.md
app/: main.py
app/core/: logging.py
app/database/: __init__.py
app/models/: schemas.py
app/services/: party_service.py
backend/: __init__.py  alembic.ini
backend/alembic/: env.py
backend/app/: __init__.py
backend/app/api/: assignments.py  parties.py  reservations.py  restaurants.py  servers.py  waiting_list.py
backend/app/core/: config.py
backend/app/database/: connection.py
backend/app/models/: database.py
backend/app/services/: assignment_service.py  reservation_service.py  restaurant_service.py  server_service.py  waiting_list_service.py
docs/: README.md  index.md
docs/api/: api-reference.md  overview.md
docs/architecture/: data-model.md  overview.md
docs/deployment/: overview.md
docs/development/: contributing.md  setup.md  testing.md
frontend/: README.md  api_client.py  streamlit_app.py
frontend/pages/: __init__.py  configuration.py  dashboard.py  reservations.py  table_assignment.py  waiting_list.py
scripts/: init.sql
tests/: conftest.py  conftest_simple.py  run_tests.py  test_api.py  test_complex_operations.py  test_main.py  test_models.py  test_services.py  test_simple.py
